adicionado googe adsense

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </div>
         </div>
     </footer>
+    <script data-ad-client="ca-pub-1609655300999921" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
